--- a/housing.html
+++ b/housing.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    <h1>Rentals and Housing</h1>
+    <h1 class = "underline">Rentals and Housing</h1>
 
     <div>
         <a href = "index.html">Home</a><br>
@@ -15,8 +16,8 @@
         <a href = "housing.html">Rentals and Housing</a><br>
     </div>
 
-    <h3>RENTALS</h3><br>
-        <table>
+    <h3 class = "underline" id = "center">RENTALS</h3><br>
+        <table id = "border" class = "center">
             <tr>
                 <th># of Guests</th>
                 <th>Price per Night</th>
@@ -41,36 +42,36 @@
                 <td>967 Euclid Ave.</td>
                 <td>(208)544-0889</td>
             </tr>
-        </table>
+        </table><br>
 
-    <img src = "vrboamount.JPG" alt = "Number of available VRBO houses in Sandpoint- roughly 500." /><br>
-    <p>For further listings, click
+    <img class = "center" id = "border" src = "vrboamount.JPG" alt = "Number of available VRBO houses in Sandpoint- roughly 500." /><br>
+    <p id = "center">For further listings, click
     <a href = "https://www.vrbo.com/">here</a></p>
     
-    <h3>HOMES FOR SALE</h3><br>   
-    <img height = "350px" img src = "https://photos.zillowstatic.com/fp/760d81a4f8b435885e2cfa2043223bdf-cc_ft_1536.webp" alt = "A 5 bed/4 bath $2 million house"/>   
-    <p><b><h4>356 N Idaho Club Dr, Sandpoint, ID 83864</h4></b></p>  
-    <p><b><h4>$1,999,900</h4></b></p>
-    <p>This lodge style Idaho Club home can best be described in 2 words: mountain splendor. The stone & rough sawn wood exterior mimics the mountain setting while<br> 
-        luxuriously appointed interiors welcome you home. Vaulted ceilings form a canopy over the expansive great room w/ a floor to ceiling stone fireplace. The<br> 
-        living space flows elegantly into a stunning kitchen w/ top-tier appliances, an island inlaid w/ a copper river, & an adjoining dining area opening onto<br> 
-        the covered deck. The master suite, complete w/ a fireplace, sauna, & private access to the hot tub, is ideal for relaxing after enjoying the area's ample<br> 
-        year-round activities. The spacious outdoor areas include 2 covered redwood decks & a woodland rock grotto; the winding path & fire pit make this spot<br> 
-        truly magical. 3463 sf, 5 bedrooms, & 4 full baths combine w/ a 2nd parcel that gives you room to work, play, & build another home. W/ the additional<br> 
+    <h3 id = "center" class = "underline">HOMES FOR SALE</h3><br>   
+    <img class = "center" id = "border" height = "350px" img src = "https://photos.zillowstatic.com/fp/760d81a4f8b435885e2cfa2043223bdf-cc_ft_1536.webp" alt = "A 5 bed/4 bath $2 million house"/>   
+    <p><b><h4 id = "center">356 N Idaho Club Dr, Sandpoint, ID 83864</h4></b></p>  
+    <p><b><h4 id = "center">$1,999,900</h4></b></p>
+    <p id = "border" class = "center">This lodge style Idaho Club home can best be described in 2 words: mountain splendor. The stone & rough sawn wood exterior mimics the mountain setting while 
+        luxuriously appointed interiors welcome you home. Vaulted ceilings form a canopy over the expansive great room w/ a floor to ceiling stone fireplace. The 
+        living space flows elegantly into a stunning kitchen w/ top-tier appliances, an island inlaid w/ a copper river, & an adjoining dining area opening onto 
+        the covered deck. The master suite, complete w/ a fireplace, sauna, & private access to the hot tub, is ideal for relaxing after enjoying the area's ample 
+        year-round activities. The spacious outdoor areas include 2 covered redwood decks & a woodland rock grotto; the winding path & fire pit make this spot 
+        truly magical. 3463 sf, 5 bedrooms, & 4 full baths combine w/ a 2nd parcel that gives you room to work, play, & build another home. W/ the additional
         purchase of handpicked furnishings, you can walk right into your new lifestyle.</p>  
     
-        <img height = "350px" img src = "https://photos.zillowstatic.com/fp/07d733f5e61f6a32cdd698e80602e956-cc_ft_384.webp" alt = "A 4 bed/3 bath for $2 million"/>   
-        <p><b><h4>3688 Wrenco Loop Rd, Sandpoint, ID 83864</h4></b></p>  
-        <p><b><h4>$1,995,000</h4></b></p>   
-        <p>Luxurious 5-Star, 20-acre Ranch w/stunning new show horse barn. 6 stalls, tack room, hay storage, and a loft. New enlarged premium outdoor riding arena<br> 
-            with over 52 loads of washed sand. Majestic views of Baldy Mountain & Johnson Creek from this very exclusive, self-sustaining estate! Year-round<br> 
-            Johnson Creek w/water rights. Close to the resort town of Sandpoint, serene & private w/over 4200 sq ft of spacious country living. Gourmet kitchen w/<br>
-            granite countertop, Wolf Range, SubZero Frig, & Knotty Alder Cabinets. Separate guest or mother-in-law wing in the main home over 3 car garage. New<br> 
-            26 X 36 insulated shop. Mature fenced fruit orchard & vineyard. Expansive outside dining w/built-in BBQ & sitting area w/fire pit adjacent to the garden<br> 
-            filled w/8 raised beds. This magical property & home is backed up by a 30kw propane generator & state of the art video surveillance system. Enjoy your<br> 
+        <img class = "center" id = "border" height = "350px" img src = "https://photos.zillowstatic.com/fp/07d733f5e61f6a32cdd698e80602e956-cc_ft_384.webp" alt = "A 4 bed/3 bath for $2 million"/>   
+        <p><b><h4 id = "center">3688 Wrenco Loop Rd, Sandpoint, ID 83864</h4></b></p>  
+        <p><b><h4 id = "center">$1,995,000</h4></b></p>   
+        <p id = "border" class = "center">Luxurious 5-Star, 20-acre Ranch w/stunning new show horse barn. 6 stalls, tack room, hay storage, and a loft. New enlarged premium outdoor riding arena
+            with over 52 loads of washed sand. Majestic views of Baldy Mountain & Johnson Creek from this very exclusive, self-sustaining estate! Year-round
+            Johnson Creek w/water rights. Close to the resort town of Sandpoint, serene & private w/over 4200 sq ft of spacious country living. Gourmet kitchen w/
+            granite countertop, Wolf Range, SubZero Frig, & Knotty Alder Cabinets. Separate guest or mother-in-law wing in the main home over 3 car garage. New
+            26 X 36 insulated shop. Mature fenced fruit orchard & vineyard. Expansive outside dining w/built-in BBQ & sitting area w/fire pit adjacent to the garden 
+            filled w/8 raised beds. This magical property & home is backed up by a 30kw propane generator & state of the art video surveillance system. Enjoy your
             summers w/air conditioning & a whole-house water filtration system. North Idaho living at its best!
-        </p> 
+        </p> <!--Not sure how to fix border size so it fits text-->
 
-   <p><b><h4>So basically, if you're not here on vacation, and you're not a millionaire, good luck ever owning a home! Ridiculous.</h4></b></p>     
+   <p><b><h4 id = "center">So basically, if you're not here on vacation, and you're not a millionaire, good luck ever owning a home! Ridiculous.</h4></b></p>     
 </body>
 </html>
