--- a/tourist_attractions.html
+++ b/tourist_attractions.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    <h1>Tourist Attractions</h1>
+    <h1 class = "underline">Tourist Attractions</h1>
 
     <div>
         <a href = "index.html">Home</a><br>
@@ -15,20 +16,20 @@
         <a href = "housing.html">Rentals and Housing</a><br>
     </div>
 
-    <h2>Schweitzer Mountain</h2>
-    <img height = "425px" img src = "https://www.planetware.com/wpimages/2021/05/idaho-sandpoint-top-things-to-do-ski-schweitzer-mountain-resort.jpg" alt="View of Lake Pend Orielle and Sandpoint from Schweitzer mountain" />
-    <p>For anyone who loves to ski, Sandpoint is heaven. Home to it's own mountain ski resort, various snow sports run<br> 
-        full-force come the wintertime. Of course, if the winter stays as warm as it's been, the season may already be<br> 
-        drawing to a close..J.K. Maybe. <br>
+    <h2 class = "underline" id = "center">Schweitzer Mountain</h2>
+    <img class = "center" id = "border" height = "425px" img src = "https://www.planetware.com/wpimages/2021/05/idaho-sandpoint-top-things-to-do-ski-schweitzer-mountain-resort.jpg" alt="View of Lake Pend Orielle and Sandpoint from Schweitzer mountain" />
+    <p id = "border" class = "center">For anyone who loves to ski, Sandpoint is heaven. Home to it's own mountain ski resort, various snow sports run
+    full-force come the wintertime. Of course, if the winter stays as warm as it's been, the season may already be
+    drawing to a close..J.K. Maybe. <br>
         <b><i>*something... something...climate change?*</i></b><br>
     </p>
 
-    <h2>City Beach Park</h2>
-    <img height = "425px" img src = "https://www.planetware.com/wpimages/2021/05/idaho-sandpoint-top-things-to-do-soak-scenery-sandpoint-city-beach.jpg" alt = "A mini Statue of Libery sits on the end of a dock, mountain and water scenery in background" />
-    <p>A lovely stretch of sand, plunked alongside the water that surrounds downtown Sandpoint. According to local folklore,<br>
-    the sand from City Beach wasn't naturally occuring- all the other beaches have pretty big rocks along their shore. So <br>
-    some person or other had the idea to make it all a bit more... "people-friendly". Brought in dump truck loads of sand, <br>
-    evened it out, slapped a park on it, and boom- happy SUMMER tourists, too! However, I tried to fact-check this one, and <br>
+    <h2 class = "underline" id = "center">City Beach Park</h2>
+    <img class = "center" id = "border" height = "425px" img src = "https://www.planetware.com/wpimages/2021/05/idaho-sandpoint-top-things-to-do-soak-scenery-sandpoint-city-beach.jpg" alt = "A mini Statue of Libery sits on the end of a dock, mountain and water scenery in background" />
+    <p id = "border" class = "center">A lovely stretch of sand, plunked alongside the water that surrounds downtown Sandpoint. According to local folklore,
+    the sand from City Beach wasn't naturally occuring- all the other beaches have pretty big rocks along their shore. So
+    some person or other had the idea to make it all a bit more... "people-friendly". Brought in dump truck loads of sand, 
+    evened it out, slapped a park on it, and boom- happy SUMMER tourists, too! However, I tried to fact-check this one, and 
     came up empty-handed. So take it or leave it, lol</p><br>
     
 
